gwapi/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-test
  labels:
    app: httpd-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-test
  template:
    metadata:
      labels:
        app: httpd-test
    spec:
      containers:
        - name: httpd
          image: ghcr.io/mccutchen/go-httpbin:2.18.3
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-test-service
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: httpd-test
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  hostnames:
  - test.gwapi.ocp.5g95v.sandbox5624.opentlc.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: example-gateway
    namespace: openshift-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: httpd-test-service
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
